CM call recording feature [1/5]
Call recording service implementation and playback

Combination of the following commits:

commit df7f323089af7aebfc29e253b13b67789fa23ccb
Author: emancebo <emancebo@cyngn.com>
Date:   Mon Aug 4 17:07:05 2014 -0700

    Call recording service implementation, show recordings and allow playback in call history

commit 04656cfe2380fbc62f1f54d1b1b2af62aaf92673
Author: emancebo <emancebo@cyngn.com>
Date:   Thu Aug 14 14:17:18 2014 -0700

    blacklist call recording for US/EU mccs, remove sysprop flag for enabling

commit 44ef8f7f59f89bbcadcb557c781047646523300e
Author: Brinly Taylor <uberlaggydarwin@gmail.com>
Date:   Tue Aug 19 10:14:02 2014 +0930

    Dialer: Blacklist call recording for Australia.

    Same as European/US laws as regards to this therefore
    to protect CM I think we should disable this. .
    Feel free to check with lawyers though.

commit bc3df8ea3e7f73a2f48e34a3737cda1833c84d0a
Author: emancebo <emancebo@cyngn.com>
Date:   Mon Nov 17 16:53:05 2014 -0800

    update call recording file format TOMATO-282

Change-Id: I56bf6857d87260e20b6a84c4db6e463b0fd87dcc

Conflicts:
	Android.mk
	res/values/cm_strings.xml
	src/com/android/dialer/CallDetailActivity.java

Dialer: Whitelist few EU countries for call recording

All entries to this list patch should state the country being modified and
provide a URL reference (either government law, precedent or similar).

A disclaimer item will also be added to the InCallUI view for the user to
acknowledge that it is their responsibility to conduct/maintain and use
recordings in conjunction with their respective country/region's laws.

Change-Id: Id6aa02447e9e8b6520cbe7c6eada7df333ee42a0

Call recording encoder/format choice 1/3

Forward port of 16a17cd0e273efffe7b163c3a248807ec4475e00

Change-Id: I95620bf944e18491652c716890396c3da4be70c4

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -53,6 +53,8 @@
      start requests, even if they happen immediately after the user
      presses home. -->
     <uses-permission android:name="android.permission.STOP_APP_SWITCHES" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="com.qualcomm.permission.USE_PHONE_SERVICE" />
 
     <application
         android:name="DialerApplication"
@@ -275,6 +277,10 @@
                   android:process="com.android.incallui"
                   android:screenOrientation="nosensor" >
         </activity>
+
+        <service android:name="com.android.services.callrecorder.CallRecorderService"
+                 android:process="com.android.incallui">
+        </service>
 
         <!-- BroadcastReceiver for receiving Intents from Notification mechanism. -->
         <receiver android:name="com.android.incallui.InCallApp$NotificationBroadcastReceiver"
